widget add button delete

--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
             android:textOff="위치 알람 끄기"
             android:textOn="위치 알람 키기" />
 
-        <Button
-            android:id="@+id/w"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="위젯 추가"/>
+<!--        <Button-->
+<!--            android:id="@+id/w"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="위젯 추가"/>-->
     </TableRow>
 
     <TextView
