--- a/MyApplication/app/src/main/res/layout/activity_search_map.xml
+++ b/MyApplication/app/src/main/res/layout/activity_search_map.xml
@@ -8,35 +8,29 @@
     android:orientation="vertical">
 <!--    tools:context=".MainActivity">-->
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <Button
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search Here"
+            tools:ignore="MissingConstraints">
+
+        </SearchView>
+
+        <ImageView
             android:id="@+id/btn_gps"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="위치추적"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/location" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"
-        android:queryHint="Search Here"
-        tools:ignore="MissingConstraints" >
-
-    </SearchView>
+    </TableRow>
 
     <LinearLayout
         android:layout_width="match_parent"
