--- a/MyApplication/app/src/main/res/layout/mypage_activity.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_activity.xml
@@ -46,6 +46,13 @@
             android:orientation="vertical"
             tools:ignore="MissingConstraints">
 
+            <Spinner
+                android:id="@+id/mainFamily_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:gravity="right" />
+
             <Button
                 style="@style/nanumButton"
                 android:layout_width="wrap_content"
