--- a/MyApplication/app/src/main/res/layout/activity_account.xml
+++ b/MyApplication/app/src/main/res/layout/activity_account.xml
@@ -8,8 +8,10 @@
         android:id="@+id/account_All"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/accountcontentback"
         android:orientation="horizontal">
 
         <LinearLayout
