--- a/MyApplication/app/src/main/res/layout/activity_callnum_card.xml
+++ b/MyApplication/app/src/main/res/layout/activity_callnum_card.xml
@@ -21,33 +21,33 @@
 <!--    </LinearLayout>-->
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:orientation="vertical">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginLeft="16dp"-->
+<!--        android:orientation="vertical">-->
 
-        <TextView
-            android:id="@+id/callNum_name"
-            style="@style/nanumTextView"
-            android:text="이름: "
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:textSize="14dp"></TextView>
+<!--        <TextView-->
+<!--            android:id="@+id/callNum_name"-->
+<!--            style="@style/nanumTextView"-->
+<!--            android:text="이름: "-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentLeft="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:textSize="14dp"></TextView>-->
 
-        <TextView
-            style="@style/nanumTextView"
-            android:id="@+id/callNum_number"
-            android:text="전화번호: "
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:layout_toRightOf="@+id/tv_number"
-            android:textSize="14dp"></TextView>
-    </LinearLayout>
+<!--        <TextView-->
+<!--            style="@style/nanumTextView"-->
+<!--            android:id="@+id/callNum_number"-->
+<!--            android:text="전화번호: "-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="3dp"-->
+<!--            android:layout_toRightOf="@+id/tv_number"-->
+<!--            android:textSize="14dp"></TextView>-->
+<!--    </LinearLayout>-->
 
 </LinearLayout>
