--- a/MyApplication/app/src/main/res/layout/activity_callnum_card.xml
+++ b/MyApplication/app/src/main/res/layout/activity_callnum_card.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
+    android:visibility="gone"
     android:background="@drawable/round_corner"
     android:orientation="horizontal">
 
