--- a/MyApplication/app/src/main/res/layout/activity_dialog_card.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dialog_card.xml
@@ -7,18 +7,18 @@
     android:background="@drawable/round_corner"
     android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_width="70dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="horizontal">-->
 
-        <ImageView
-            android:id="@+id/callImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_input_medicine" />
-    </LinearLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/callImageView"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/ic_input_medicine" />-->
+<!--    </LinearLayout>-->
 
 
     <LinearLayout
